--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Harsh Thakor</title>
-    <link rel="stylesheet" href="E:\web practice\CSS-MySite\css\style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,15 +11,15 @@
   </head>
   <body>
     <div class="top">
-      <img class="top-cloud" src="E:\web practice\CSS-MySite\images\cloud.png" alt="">
+      <img class="top-cloud" src="images\cloud.png" alt="">
       <h1>I'm Harsh </h1>
       <h2>Learning Web development through Udemy</h2>
-      <img class="bottom-cloud" src="E:\web practice\CSS-MySite\images\cloud.png" alt="">
-      <img class="mountain" src="E:\web practice\CSS-MySite\images\mountain.png" alt="">
+      <img class="bottom-cloud" src="images\cloud.png" alt="">
+      <img class="mountain" src="images\mountain.png" alt="">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="pic" src="E:\web practice\CSS-MySite\images\profile.jpg" alt="">
+        <img class="pic" src="images\profile.jpg" alt="">
         <h2>Hello.</h2>
         <p class="intro">I am learning web development from Udemy as well as i know the programming language like python and java.</p>
       </div>
@@ -27,12 +27,12 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="bowling" src="E:\web practice\CSS-MySite\images\bowling_PNG20.png" alt="">
+          <img class="bowling" src="images\bowling_PNG20.png" alt="">
           <h3>Bowling</h3>
           <p>Bowling is a sport or leisure activity in which a player rolls or throws a bowling ball towards a group of pins. It is one of the major forms of throwing sports. Most people think of bowling as a fun indoor game that can be played with family or friends.</p>
         </div>
         <div class="skill-row">
-          <img class="gokarting" src="E:\web practice\CSS-MySite\images\go.png" alt="">
+          <img class="gokarting" src="images\go.png" alt="">
           <h3>gokarting</h3>
           <p>A go-kart, also written as go-cart (often referred to as simply a kart), is a type of sports car, close wheeled car, open-wheel car or quadracycle. Go-karts come in all shapes and forms, from non-motorised models to high-performance racing karts.</p>
         </div>
